include/llama.h

    
    struct llama_vocab;
    struct llama_model;
    struct llama_context;
    struct llama_sampler;
    typedef int32_t llama_pos;
    typedef int32_t llama_token;
    typedef int32_t llama_seq_id;
    typedef struct llama_token_data {
        llama_token id; 
        float logit;    
        float p;        
    } llama_token_data;
    typedef struct llama_token_data_array {
        llama_token_data * data;
        size_t size;
        int64_t selected; 
        bool sorted;      
    } llama_token_data_array;
    typedef struct llama_batch {
        int32_t n_tokens;
        llama_token  *  token;
        float        *  embd;
        llama_pos    *  pos;
        int32_t      *  n_seq_id;
        llama_seq_id ** seq_id;
        int8_t       *  logits;   
    } llama_batch;
    typedef struct llama_sampler_chain_params {
        bool no_perf; 
    } llama_sampler_chain_params;
    typedef struct llama_chat_message {
        const char * role;
        const char * content;
    } llama_chat_message;
    LLAMA_API bool llama_state_load_file(
            struct llama_context * ctx,
                      const char * path_session,
                     llama_token * tokens_out,
                          size_t   n_token_capacity,
                          size_t * n_token_count_out);
    LLAMA_API bool llama_state_save_file(
            struct llama_context * ctx,
                      const char * path_session,
               const llama_token * tokens,
                          size_t   n_token_count);
    LLAMA_API size_t llama_state_seq_get_size(
            struct llama_context * ctx,
                    llama_seq_id   seq_id);
    LLAMA_API size_t llama_state_seq_get_data(
            struct llama_context * ctx,
                         uint8_t * dst,
                          size_t   size,
                    llama_seq_id   seq_id);
    LLAMA_API size_t llama_state_seq_set_data(
            struct llama_context * ctx,
                   const uint8_t * src,
                          size_t   size,
                    llama_seq_id   dest_seq_id);
    LLAMA_API struct llama_batch llama_batch_get_one(
                  llama_token * tokens,
                      int32_t   n_tokens);
    LLAMA_API struct llama_batch llama_batch_init(
            int32_t n_tokens,
            int32_t embd,
            int32_t n_seq_max);
    LLAMA_API void llama_batch_free(struct llama_batch batch);
    LLAMA_API int32_t llama_encode(
            struct llama_context * ctx,
              struct llama_batch   batch);
    LLAMA_API int32_t llama_decode(
            struct llama_context * ctx,
              struct llama_batch   batch);
    LLAMA_API void llama_set_causal_attn(struct llama_context * ctx, bool causal_attn);
    LLAMA_API void llama_synchronize(struct llama_context * ctx);
    LLAMA_API float * llama_get_logits_ith(struct llama_context * ctx, int32_t i);
    LLAMA_API float * llama_get_embeddings(struct llama_context * ctx);
    LLAMA_API float * llama_get_embeddings_ith(struct llama_context * ctx, int32_t i);
    LLAMA_API float * llama_get_embeddings_seq(struct llama_context * ctx, llama_seq_id seq_id);
    LLAMA_API int32_t llama_tokenize(
        const struct llama_vocab * vocab,
                      const char * text,
                         int32_t   text_len,
                     llama_token * tokens,
                         int32_t   n_tokens_max,
                            bool   add_special,
                            bool   parse_special);
    LLAMA_API int32_t llama_token_to_piece(
              const struct llama_vocab * vocab,
                           llama_token   token,
                                  char * buf,
                               int32_t   length,
                               int32_t   lstrip,
                                  bool   special);
    LLAMA_API int32_t llama_detokenize(
        const struct llama_vocab * vocab,
               const llama_token * tokens,
                         int32_t   n_tokens,
                            char * text,
                         int32_t   text_len_max,
                            bool   remove_special,
                            bool   unparse_special);
    LLAMA_API int32_t llama_chat_apply_template(
                            const char * tmpl,
       const struct llama_chat_message * chat,
                                size_t   n_msg,
                                  bool   add_ass,
                                  char * buf,
                               int32_t   length);
    typedef void * llama_sampler_context_t;
    struct llama_sampler_i {
        const char *           (*name)  (const struct llama_sampler * smpl);                                 
        void                   (*accept)(      struct llama_sampler * smpl, llama_token token);              
        void                   (*apply) (      struct llama_sampler * smpl, llama_token_data_array * cur_p); 
        void                   (*reset) (      struct llama_sampler * smpl);                                 
        struct llama_sampler * (*clone) (const struct llama_sampler * smpl);                                 
        void                   (*free)  (      struct llama_sampler * smpl);                                 
        bool (*backend_init)(
                struct llama_sampler       * smpl,
                ggml_backend_buffer_type_t   buft,
                uint32_t                     n_outputs_max_per_seq);
        void (*backend_accept)(
                struct llama_sampler * smpl,
                struct ggml_context  * ctx,
                struct ggml_cgraph   * gf,
                struct ggml_tensor   * selected_token);
        void (*backend_apply)(
                struct llama_sampler      * smpl,
                struct ggml_context       * ctx,
                struct ggml_cgraph        * gf,
                struct llama_sampler_data * data);
        void (*backend_set_input)(struct llama_sampler * smpl);
        void (*backend_reset)(struct llama_sampler * smpl);
        void (*copy_state)(const struct llama_sampler * src, struct llama_sampler * dst);
    };
    struct llama_sampler {
        struct llama_sampler_i * iface;
        llama_sampler_context_t ctx;
    };
    LLAMA_API void                   llama_sampler_accept(      struct llama_sampler * smpl, llama_token token);
    LLAMA_API void                   llama_sampler_apply (      struct llama_sampler * smpl, llama_token_data_array * cur_p);
    LLAMA_API void                   llama_sampler_reset (      struct llama_sampler * smpl);
    LLAMA_API void                   llama_sampler_free  (      struct llama_sampler * smpl);
    LLAMA_API struct llama_sampler * llama_sampler_chain_init(struct llama_sampler_chain_params params);
    LLAMA_API void                   llama_sampler_chain_add(      struct llama_sampler * chain, struct llama_sampler * smpl);
    LLAMA_API struct llama_sampler * llama_sampler_init_greedy(void);
    LLAMA_API struct llama_sampler * llama_sampler_init_dist(uint32_t seed);
    LLAMA_API struct llama_sampler * llama_sampler_init_top_k      (int32_t k);
    LLAMA_API struct llama_sampler * llama_sampler_init_top_p      (float   p, size_t min_keep);
    LLAMA_API struct llama_sampler * llama_sampler_init_min_p      (float   p, size_t min_keep);
    LLAMA_API struct llama_sampler * llama_sampler_init_temp       (float   t);
    LLAMA_API llama_token llama_sampler_sample(struct llama_sampler * smpl, struct llama_context * ctx, int32_t idx);
    LLAMA_API int32_t llama_split_path(char * split_path, size_t maxlen, const char * path_prefix, int32_t split_no, int32_t split_count);
    LLAMA_API int32_t llama_split_prefix(char * split_prefix, size_t maxlen, const char * split_path, int32_t split_no, int32_t split_count);
    LLAMA_API void                           llama_perf_context_print(const struct llama_context * ctx);
    LLAMA_API void                           llama_perf_sampler_print(const struct llama_sampler * chain);
    typedef bool (*llama_opt_param_filter)(const struct ggml_tensor * tensor, void * userdata);
    LLAMA_API bool llama_opt_param_filter_all(const struct ggml_tensor * tensor, void * userdata);
    struct llama_opt_params {
        uint32_t n_ctx_train; 
        llama_opt_param_filter param_filter; 
        void * param_filter_ud;              
        ggml_opt_get_optimizer_params get_opt_pars; 
        void * get_opt_pars_ud;                     
        enum ggml_opt_optimizer_type optimizer_type;
    };
    LLAMA_API void llama_opt_init(struct llama_context * lctx, struct llama_model * model, struct llama_opt_params lopt_params);
    LLAMA_API void llama_opt_epoch(
            struct llama_context    * lctx,
            ggml_opt_dataset_t        dataset,
            ggml_opt_result_t         result_train,
            ggml_opt_result_t         result_eval,
            int64_t                   idata_split,
            ggml_opt_epoch_callback   callback_train,
            ggml_opt_epoch_callback   callback_eval);