examples/simple-rust/src/ffi.rs


    pub fn llama_tokenize(
        vocab: *const llama_vocab,
        text: *const c_char,
        text_len: i32,
        tokens: *mut llama_token,
        n_tokens_max: i32,
        add_special: bool,
        parse_special: bool,
    ) -> i32;
    pub fn llama_detokenize(
        vocab: *const llama_vocab,
        tokens: *const llama_token,
        n_tokens: i32,
        text: *mut c_char,
        text_len_max: i32,
        remove_special: bool,
        unparse_special: bool,
    ) -> i32;
    pub fn llama_token_to_piece(
        vocab: *const llama_vocab,
        token: llama_token,
        buf: *mut c_char,
        length: i32,
        lstrip: i32,
        special: bool,
    ) -> i32;

    pub fn llama_batch_get_one(tokens: *mut llama_token, n_tokens: i32) -> llama_batch;
    pub fn llama_batch_init(n_tokens: i32, embd: i32, n_seq_max: i32) -> llama_batch;
    pub fn llama_batch_free(batch: llama_batch);
    pub fn llama_encode(ctx: *mut llama_context, batch: llama_batch) -> i32;
    pub fn llama_decode(ctx: *mut llama_context, batch: llama_batch) -> i32;
    pub fn llama_synchronize(ctx: *mut llama_context);
    pub fn llama_set_causal_attn(ctx: *mut llama_context, causal_attn: bool);
    pub fn llama_get_logits_ith(ctx: *mut llama_context, i: i32) -> *const f32;
    pub fn llama_get_embeddings(ctx: *mut llama_context) -> *mut f32;
    pub fn llama_get_embeddings_ith(ctx: *mut llama_context, i: i32) -> *mut f32;
    pub fn llama_get_embeddings_seq(ctx: *mut llama_context, seq_id: llama_seq_id) -> *mut f32;
    pub fn llama_state_seq_get_size(ctx: *mut llama_context, seq_id: llama_seq_id) -> usize;
    pub fn llama_state_seq_get_data(
        ctx: *mut llama_context,
        dst: *mut u8,
        size: usize,
        seq_id: llama_seq_id,
    ) -> usize;
    pub fn llama_state_seq_set_data(
        ctx: *mut llama_context,
        src: *const u8,
        size: usize,
        dest_seq_id: llama_seq_id,
    ) -> usize;
    pub fn llama_state_load_file(
        ctx: *mut llama_context,
        path_session: *const c_char,
        tokens_out: *mut llama_token,
        n_token_capacity: usize,
        n_token_count_out: *mut usize,
    ) -> bool;
    pub fn llama_state_save_file(
        ctx: *mut llama_context,
        path_session: *const c_char,
        tokens: *const llama_token,
        n_token_count: usize,
    ) -> bool;

    pub fn llama_sampler_chain_init(params: llama_sampler_chain_params) -> *mut llama_sampler;
    pub fn llama_sampler_chain_add(chain: *mut llama_sampler, sampler: *mut llama_sampler);
    pub fn llama_sampler_init_greedy() -> *mut llama_sampler;
    pub fn llama_sampler_init_top_k(k: i32) -> *mut llama_sampler;
    pub fn llama_sampler_init_top_p(p: f32, min_keep: usize) -> *mut llama_sampler;
    pub fn llama_sampler_init_min_p(p: f32, min_keep: usize) -> *mut llama_sampler;
    pub fn llama_sampler_init_temp(t: f32) -> *mut llama_sampler;
    pub fn llama_sampler_init_dist(seed: u32) -> *mut llama_sampler;
    pub fn llama_sampler_apply(smpl: *mut llama_sampler, cur_p: *mut llama_token_data_array);
    pub fn llama_sampler_sample(
        smpl: *mut llama_sampler,
        ctx: *mut llama_context,
        idx: i32,
    ) -> llama_token;
    pub fn llama_sampler_accept(smpl: *mut llama_sampler, token: llama_token);
    pub fn llama_sampler_reset(smpl: *mut llama_sampler);
    pub fn llama_sampler_free(smpl: *mut llama_sampler);

    pub fn llama_perf_sampler_print(chain: *const llama_sampler);
    pub fn llama_perf_context_print(ctx: *const llama_context);

    pub fn ggml_opt_dataset_init(
        type_data: ggml_type,
        type_label: ggml_type,
        ne_datapoint: i64,
        ne_label: i64,
        ndata: i64,
        ndata_shard: i64,
    ) -> ggml_opt_dataset_t;
    pub fn ggml_opt_dataset_free(dataset: ggml_opt_dataset_t);
    pub fn ggml_opt_dataset_ndata(dataset: ggml_opt_dataset_t) -> i64;
    pub fn ggml_opt_dataset_data(dataset: ggml_opt_dataset_t) -> *mut ggml_tensor;
    pub fn ggml_opt_dataset_labels(dataset: ggml_opt_dataset_t) -> *mut ggml_tensor;
    pub fn ggml_opt_get_default_optimizer_params(
        userdata: *mut c_void,
    ) -> ggml_opt_optimizer_params;
    pub fn ggml_opt_optimizer_name(optimizer: ggml_opt_optimizer_type) -> *const c_char;
    pub fn ggml_opt_result_init() -> ggml_opt_result_t;
    pub fn ggml_opt_result_free(result: ggml_opt_result_t);
    pub fn ggml_opt_result_reset(result: ggml_opt_result_t);
    pub fn ggml_opt_epoch_callback_progress_bar(
        opt_ctx: ggml_opt_context_t,
        dataset: ggml_opt_dataset_t,
        result: ggml_opt_result_t,
        ibatch: i64,
        ibatch_max: i64,
        train: bool,
    );
    pub fn llama_opt_param_filter_all(tensor: *const ggml_tensor, userdata: *mut c_void) -> bool;
    pub fn llama_opt_init(
        lctx: *mut llama_context,
        model: *mut llama_model,
        lopt_params: llama_opt_params,
    );
    pub fn llama_opt_epoch(
        lctx: *mut llama_context,
        dataset: ggml_opt_dataset_t,
        result_train: ggml_opt_result_t,
        result_eval: ggml_opt_result_t,
        idata_split: i64,
        callback_train: ggml_opt_epoch_callback,
        callback_eval: ggml_opt_epoch_callback,
    );

    pub fn llama_chat_apply_template(
        tmpl: *const c_char,
        chat: *const llama_chat_message,
        n_msg: usize,
        add_ass: bool,
        buf: *mut c_char,
        length: i32,
    ) -> i32;

    pub fn gguf_init_empty() -> *mut gguf_context;
    pub fn gguf_init_from_file(fname: *const c_char, params: gguf_init_params)
        -> *mut gguf_context;
    pub fn gguf_free(ctx: *mut gguf_context);
    pub fn gguf_get_data_offset(ctx: *const gguf_context) -> usize;
    pub fn gguf_find_key(ctx: *const gguf_context, key: *const c_char) -> i64;
    pub fn gguf_get_val_u16(ctx: *const gguf_context, key_id: i64) -> u16;
    pub fn gguf_get_val_str(ctx: *const gguf_context, key_id: i64) -> *const c_char;
    pub fn gguf_get_n_tensors(ctx: *const gguf_context) -> i64;
    pub fn gguf_get_tensor_name(ctx: *const gguf_context, tensor_id: i64) -> *const c_char;
    pub fn gguf_find_tensor(ctx: *const gguf_context, name: *const c_char) -> i64;
    pub fn gguf_get_tensor_offset(ctx: *const gguf_context, tensor_id: i64) -> usize;
    pub fn gguf_get_tensor_size(ctx: *const gguf_context, tensor_id: i64) -> usize;
    pub fn gguf_set_kv(ctx: *mut gguf_context, src: *const gguf_context);
    pub fn gguf_set_val_u16(ctx: *mut gguf_context, key: *const c_char, val: u16);
    pub fn gguf_set_val_i32(ctx: *mut gguf_context, key: *const c_char, val: i32);
    pub fn gguf_set_val_str(ctx: *mut gguf_context, key: *const c_char, val: *const c_char);
    pub fn gguf_add_tensor(ctx: *mut gguf_context, tensor: *const ggml_tensor);
    pub fn gguf_get_meta_size(ctx: *const gguf_context) -> usize;
    pub fn gguf_get_meta_data(ctx: *const gguf_context, data: *mut c_void);
    pub fn gguf_write_to_file(
        ctx: *const gguf_context,
        fname: *const c_char,
        only_meta: bool,
    ) -> bool;

    pub fn ggml_get_tensor(ctx: *mut ggml_context, name: *const c_char) -> *mut ggml_tensor;
    pub fn ggml_nbytes(tensor: *const ggml_tensor) -> usize;

    pub fn llama_split_path(
        split_path: *mut c_char,
        maxlen: usize,
        path_prefix: *const c_char,
        split_no: i32,
        split_count: i32,
    ) -> i32;
    pub fn llama_split_prefix(
        split_prefix: *mut c_char,
        maxlen: usize,
        split_path: *const c_char,
        split_no: i32,
        split_count: i32,
    ) -> i32;
}
